# OCRStudioSDK-Ubuntu

./: LICENSE.txt  README.md
bindings/csharp/csocrstudiosdk/: OCRStudioSDKDelegate.cs  OCRStudioSDKException.cs  OCRStudioSDKImage.cs  OCRStudioSDKInstance.cs  OCRStudioSDKItem.cs  OCRStudioSDKItemIterator.cs  OCRStudioSDKPixelFormat.cs  OCRStudioSDKResult.cs  OCRStudioSDKSession.cs  OCRStudioSDKString.cs  OCRStudioSDKTarget.cs  OCRStudioSDKYUVFormat.cs  csocrstudiosdk.cs  csocrstudiosdkPINVOKE.cs
bindings/python/: ocrstudiosdk.py
config/: config_mock_ocrstudio.ocr
doc/: build.txt
samples/ocrstudiosdk_sample/: build_ocrstudiosdk_sample.sh
samples/ocrstudiosdk_sample_cs/: App.config  CMakeLists.txt  OcrStudioSdkSampleCs.cs  build_csharp_wrapper.sh  ocrstudiosdk_sample_cs_x64.csproj  ocrstudiosdk_sample_cs_x86.csproj
samples/ocrstudiosdk_sample_faces/: build_ocrstudiosdk_sample_faces.sh
samples/ocrstudiosdk_sample_faces_cs/: OcrStudioSdkSampleCs_faces.cs  README.txt  csocrstudiosdk.i  ocrstudiosdk_sample_faces_cs_x64.csproj  ocrstudiosdk_sample_faces_cs_x86.csproj
samples/ocrstudiosdk_sample_faces_python/: CMakeLists.txt  README.txt  ocrstudiosdk.i  ocrstudiosdk_sample_faces_python.py
samples/ocrstudiosdk_sample_python/: build_python_wrapper.sh  ocrstudiosdk_sample_python.py
